# rmq-rpc

./: README.md  pyproject.toml
examples/: .env.example  README.md  client.py  docker-compose.yml  functions.py  server.py
rmq_rpc/: __init__.py  client.py  enums.py  serializers.py  server.py
