[tool.isort]
profile = "black"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.8.0",
    "pre-commit>=2.21.0",
    "python-dotenv>=0.21.0",
]

[project]
name = "rmq-rpc"
version = "0.2.2"
description = "A lightweight RPC based on RabbitMQ."
authors = [
    {name = "aprilahijriyan", email = "hijriyan23@gmail.com"},
]
dependencies = [
    "aio-pika>=8.3.0",
]
requires-python = ">=3.9,<3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
